Fix card text color in dark mode

--- a/src/assets/css/bundle/custom-card.css
+++ b/src/assets/css/bundle/custom-card.css
@@ -24,6 +24,7 @@ custom-card :is(h2, h3) {
   --flow-space: var(--space-m);
   grid-row: headline;
   font-size: var(--size-step-2);
+  color: var(--color-dark);
 }
 
 custom-card :is(h2, h3) a {
@@ -46,6 +47,7 @@ custom-card img {
 custom-card > .meta {
   grid-row: meta;
   font-size: var(--size-step-min-1);
+  color: var(--color-dark);
 }
 
 custom-card > p {
